--- a/WebUI/ClientApp/src/app/manager-rm/dashboard/components/dashboard-panel/dashboard-panel.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/dashboard/components/dashboard-panel/dashboard-panel.component.html
@@ -51,7 +51,7 @@
             <td>{{setDevelopmentCall()}}</td>
           </tr>
           <tr>
-            <td style="background-color:#fcfcfc; max-width:50px !important">Звонки колегам</td>
+            <td style="background-color:#fcfcfc; max-width:50px !important">Звонки коллегам</td>
             <td>{{setManagerCallDays()}}</td>
             <td>{{setmanagerCallWeek()}}</td>
             <td>{{setManagertCallMonth()}}</td>
