--- a/WebUI/ClientApp/src/app/сontroler/report/component/report-call/report-call.component.html
+++ b/WebUI/ClientApp/src/app/сontroler/report/component/report-call/report-call.component.html
@@ -113,8 +113,8 @@
         </span><br />
         <span>
           Начало работы: {{getStartWorkManager(workgroup.regionalManagerId, workgroup.workgroupId)}}
-        </span>
-        <span><br />
+        </span><br />
+        <span>
           Конец работы: {{getEndWorkManager(workgroup.regionalManagerId, workgroup.workgroupId)}}
         </span>
         <table>
