Добалена страница с клиентами  у контролера с возможность и алгоритмом оставить коментарий менеджеру, в таблицу охвата добалены 3 столбца

--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/correction-response/correction-response.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/correction-response/correction-response.component.html
@@ -12,12 +12,29 @@
     </tr>
   </thead>
   <tbody id="tbodyId">
-    <tr *ngFor="let elm of data.callsComments">
+    <tr *ngFor="let elm of callsAccept">
       <td [style.color]="elm.colorPen">{{elm.date}}</td>
       <td [style.color]="elm.colorPen">{{elm.comment}}</td>
       <td [style.color]="elm.colorPen">{{elm.durations}}</td>
       <td> <textarea (focusout)="comment(elm.clientId, elm.contactClientId, $event)" style="border:none;margin:1px;padding:10px;width:60%;height:50px" value="">{{elm.maanagerComment}}</textarea></td>
       <td><button  class="btnAccept" (click)="corect(elm.clientId, elm.contactClientId, $event)">Испралено</button></td>
+    </tr>
+  </tbody>
+</table>
+<hr />
+<table>
+  <thead>
+    <tr>
+      <th>Коментарий котролера</th>
+      <th>Коментарий</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody id="tbodyId1">
+    <tr *ngFor="let elm of clientAccept">
+      <td [style.color]="elm.colorPen">{{elm.comment}}</td>
+      <td> <textarea (focusout)="comment1(elm.clientId, $event)" style="border:none;margin:1px;padding:10px;width:60%;height:50px" value="">{{elm.maanagerComment}}</textarea></td>
+      <td><button class="btnAccept" (click)="corect1(elm.clientId, $event)">Испралено</button></td>
     </tr>
   </tbody>
 </table>
