--- a/WebUI/ClientApp/src/app/сontroler/controler.component.html
+++ b/WebUI/ClientApp/src/app/сontroler/controler.component.html
@@ -7,6 +7,7 @@
       <li><a href="admin" routerLinkActive="active">Админ панель</a></li>
       <li><a routerLink="calls" routerLinkActive="active">Звонки</a></li>
       <li><a routerLink="report" routerLinkActive="active">Отчет</a></li>
+      <li><a routerLink="clients" routerLinkActive="active">Клиенты</a></li>
     </ul>
   </nav>
 
