Добалена страница с план фактом у контролера

--- a/WebUI/ClientApp/src/app/сontroler/controler.component.html
+++ b/WebUI/ClientApp/src/app/сontroler/controler.component.html
@@ -8,6 +8,7 @@
       <li><a routerLink="calls" routerLinkActive="active">Звонки</a></li>
       <li><a routerLink="report" routerLinkActive="active">Отчет</a></li>
       <li><a routerLink="clients" routerLinkActive="active">Клиенты</a></li>
+      <li><a routerLink="plan-task" routerLinkActive="active">План</a></li>
     </ul>
   </nav>
 
