--- a/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.sass
+++ b/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.sass
@@ -120,3 +120,8 @@ th
         border-radius: 99px
         border: 1px solid #E9F3FF
         margin-bottom: 10px
+    .calendar
+        width: 300px
+        position: absolute
+        right: 10px
+        z-index: 10
