Пофикшена верстка везде

--- a/WebUI/ClientApp/src/app/manager-rm/dashboard/components/dashboard-panel/dashboard-panel.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/dashboard/components/dashboard-panel/dashboard-panel.component.html
@@ -23,7 +23,7 @@
             <td>{{setAllCall()}}</td>
           </tr>
           <tr>
-            <td style="background-color:#fcfcfc; max-width:50px !important">более 2,5 мин</td>
+            <td style="background-color:#fcfcfc; max-width:50px !important">Более 2,5 мин</td>
             <td>{{setMoreTwoFiveCallDays()}}</td>
             <td>{{setMoreTwoFiveCallWeek()}}</td>
             <td>{{setMoreTwoFiveCallMonth()}}</td>
@@ -37,7 +37,7 @@
             <td>{{setMore10to2_5Call()}}</td>
           </tr>
           <tr>
-            <td style="background-color:#fcfcfc; max-width:50px !important">мение 10 сек</td>
+            <td style="background-color:#fcfcfc; max-width:50px !important">Менее 10 сек</td>
             <td>{{setLes10SecCallDays()}}</td>
             <td>{{setLes10SecCallWeek()}}</td>
             <td>{{setLes10SecCallMonth()}}</td>
