--- a/WebUI/ClientApp/src/app/сontroler/report/component/report-call/report-call.component.html
+++ b/WebUI/ClientApp/src/app/сontroler/report/component/report-call/report-call.component.html
@@ -45,7 +45,7 @@
             <td>{{getAllAllCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
           </tr>
           <tr>
-            <td style="max-width:100px !important">более 2,5 мин</td>
+            <td style="max-width:100px !important">Более 2,5 мин</td>
             <td>{{getToDayMore2and5Call(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
             <td>{{getWeekMore2and5Call(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
             <td>{{getMonthMore2and5Call(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
@@ -59,7 +59,7 @@
             <td>{{getAllSmaller2and5AndMore10SCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
           </tr>
           <tr>
-            <td style="max-width:100px !important">мение 10 сек</td>
+            <td style="max-width:100px !important">Менее 10 сек</td>
             <td>{{getToDaySmaller10SCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
             <td>{{getWeekSmaller10SCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
             <td>{{getMonthSmaller10SCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
@@ -94,7 +94,7 @@
             <td>{{getAllInboxCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
           </tr>
           <tr>
-            <td style="max-width:100px !important">Неотвечинные</td>
+            <td style="max-width:100px !important">Неотвеченные</td>
             <td>{{getToDayUnansweredCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
             <td>{{getWeekUnansweredCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
             <td>{{getMonthUnansweredCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
@@ -139,7 +139,7 @@
             <td>{{getAllAllCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
           </tr>
           <tr>
-            <td style="max-width:100px !important">более 2,5 мин</td>
+            <td style="max-width:100px !important">Более 2,5 мин</td>
             <td>{{getToDayMore2and5Call(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
             <td>{{getWeekMore2and5Call(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
             <td>{{getMonthMore2and5Call(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
@@ -153,7 +153,7 @@
             <td>{{getAllSmaller2and5AndMore10SCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
           </tr>
           <tr>
-            <td style="max-width:100px !important">мение 10 сек</td>
+            <td style="max-width:100px !important">Менее 10 сек</td>
             <td>{{getToDaySmaller10SCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
             <td>{{getWeekSmaller10SCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
             <td>{{getMonthSmaller10SCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
@@ -188,7 +188,7 @@
             <td>{{getAllInboxCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
           </tr>
           <tr>
-            <td style="max-width:100px !important">Неотвечинные</td>
+            <td style="max-width:100px !important">Неотвеченные</td>
             <td>{{getToDayUnansweredCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
             <td>{{getWeekUnansweredCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
             <td>{{getMonthUnansweredCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
